优化教程前端交互，增加后台用户管理